@@ -23,11 +23,11 @@ my $expected = [
     { 'time' => '1260725492', 'type' => 'Warning' },
     { 'time' => '1260971246', 'type' => 'PROGRAM_RESTART event encountered, restarting...', 'proc_start' => 2 },
     { 'time' => '1261050819', 'type' => 'PASSIVE HOST CHECK' },
-    { 'time' => '1261685289', 'type' => 'SERVICE NOTIFICATION' },
+    { 'time' => '1261685289', 'type' => 'SERVICE NOTIFICATION', 'plugin_output' => 'mo REVOVERED: random servicecheck recovered', 'service_description' => 'i0test_random_18', 'host_name' => 'i0test_host_180', 'contact_name' => 'test_contact' },
     { 'time' => '1261686379', 'type' => 'SERVICE FLAPPING ALERT' },
     { 'time' => '1261686484', 'type' => 'SERVICE ALERT', 'host_name' => 'i0test_host_132', 'service_description' => 'i0test_random_18', 'state' => 2, 'hard' => 1, 'plugin_output' => 'mo CRITICAL: random servicecheck critical' },
     { 'time' => '1261687372', 'type' => 'HOST ALERT', 'host_name' => 'i0test_host_198', 'state' => 1, 'hard' => 1, 'plugin_output' => 'mo DOWN: random hostcheck: parent host down' },
-    { 'time' => '1261687372', 'type' => 'HOST NOTIFICATION' },
+    { 'time' => '1261687372', 'type' => 'HOST NOTIFICATION', 'plugin_output' => 'mo DOWN: random hostcheck: parent host down', 'host_name' => 'i0test_host_198', 'contact_name' => 'test_contact' },
     { 'time' => '1261687373', 'type' => 'HOST FLAPPING ALERT' },
     { 'time' => '1262850812', 'type' => 'Caught SIGSEGV, shutting down...', 'proc_start' => 0 },
     { 'time' => '1262850822', 'type' => 'HOST DOWNTIME ALERT', 'host_name' => 'localhost', 'start' => 1 },
