@@ -3,6 +3,7 @@ Revision history for Perl extension Monitoring::Availability.
 next:
     - added notifications to parser
     - fixed problem with daylightsaving change
+    - fixed problem with host events in service availability
 
 0.46  Tue Mar 12 16:46:40 CET 2013
     - fixed typo
